k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: recurso-gic-85132
  labels:
    app: client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: simaoarrais/gic_client:latest
          resources:
            requests:
              memory: "1284Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
