k8s/client-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: recurso-gic-85132
  labels:
    app: client
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
