k8s/mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: recurso-gic-85132
  labels:
    app: mongodb
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
