k8s/minikube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-ingress
  namespace: recurso-gic-85132
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: client-service
                port:
                  number: 3000
          - path: /posts/?(.*)
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 5000
